--- a/phonebook3/backend/package.json
+++ b/phonebook3/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "start": "node index.js",
-      "dev": "nodemon index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^9.0.2",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
-
